# meeting_translator

./: .env.example  .gitignore  CLIENT_REFACTOR_PLAN.md  README.md  main.py  pyproject.toml  requirements-aliyun.txt  requirements-all.txt  requirements-core.txt  requirements-doubao.txt  requirements-openai.txt  requirements.txt  run.bat  run.sh  todo.txt
docs/: translation_api_languages.md
meeting_translator/: __init__.py  audio_capture_thread.py  audio_device_manager.py  audio_output_thread.py  client_audio_mixin.py  client_output_mixin.py  config_manager.py  doubao_client.py  glossary.json  glossary_manager.py  main_app.py  openai_client.py  openai_realtime_client.py  openai_translate_client.py  output_handlers.py  output_manager.py  paths.py  qwen_client.py  subtitle_window.py  translation_client_base.py  translation_client_factory.py  translation_service.py  voice_sample_generator.py
meeting_translator/context_assistant/: __init__.py  context_service.py  context_sidebar.py  hotkey_manager.py  prompt_templates.py
meeting_translator/locales/: en_US.json  zh_CN.json
meeting_translator/styles/: modern_style.qss
