[project]
name = "meeting-translator"
version = "1.0.0"
description = "Real-time meeting translation system with zero latency (会议翻译工具)"
authors = [{name = "Ren Yuan"}]
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}

dependencies = [
    # Core Dependencies / 核心依赖
    "numpy==1.24.3",
    "pyaudio==0.2.14",
    "pyaudiowpatch==0.2.12.13; sys_platform == 'win32'",
    "websockets==12.0",
    "python-dotenv==1.0.0",

    # GUI / 图形界面
    "PyQt5==5.15.10",
]

[project.optional-dependencies]
# Doubao (ByteDance) provider dependencies
# 豆包（字节跳动）提供商依赖
doubao = [
    "protobuf>=4.25.1",
]

# All providers (install all optional dependencies)
# 所有提供商（安装所有可选依赖）
all = [
    "protobuf>=4.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meeting_translator"]

[tool.uv]
# UV-specific configuration
dev-dependencies = []

[tool.uv.sources]
# No custom sources needed - all from PyPI
